# agent-eval

./: .env.example  .gitignore  00_DESIGN_OVERVIEW.md  01_FAILURE_PATTERN_STRATEGY.md  BATCH_ANALYSIS.md  Dockerfile  Pipeline.ipynb  Pipeline_Batch.ipynb  README.md  STARTUP.md  pyproject.toml
artifacts/: regression_prompts.json
artifacts/prompts/: active_prompt.txt  prompt_v1.txt  prompt_v2.txt
artifacts/tools/: tool_schema_v1.json  tool_schema_v2.json
data/: 07_tool_call_error.json  10_tool_success.json
data/travel_agent/: travel_v1_good_001.json  travel_v1_good_002.json  travel_v1_good_003.json  travel_v1_issue_001.json  travel_v1_issue_002.json  travel_v1_issue_003.json  travel_v1_issue_004.json  travel_v1_issue_005.json  travel_v1_issue_006.json  travel_v1_issue_007.json  travel_v1_issue_008.json  travel_v1_issue_009.json  travel_v1_issue_010.json  travel_v1_issue_011.json  travel_v1_issue_012.json
data/unprocessed/: 08_context_loss.json  09_disagreement.json  low_quality_conversation.json  photography_workshop_trip.json  semantic_issues_demo.json
src/: __init__.py  config.py  main_analysis.py  models.py
src/agent/: __init__.py  demo_agent.py
src/analysis/: adapter.py  clustering.py  models.py  regression.py  service.py  suggestions.py  utils.py
src/api/: __init__.py  main.py
src/db/: __init__.py  repository.py
src/evaluation/: __init__.py  service.py
src/feedback/: __init__.py  metrics.py  sampling.py  service.py
src/ingestion/: __init__.py  service.py
src/pipeline/: __init__.py  batch_processor.py  processor.py
src/utils/: llm.py
(+16 files in other folders)
