[tool.poetry]
name = "ai-agent-eval"
version = "0.1.0"
description = "AI Agent Evaluation Pipeline - Modular evaluation framework for AI agent conversations"
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
uvicorn = ">=0.22.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
openai = ">=1.0.0"
sqlalchemy = ">=2.0.0"
aiosqlite = ">=0.19.0"
python-multipart = ">=0.0.6"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

